--- a/analysis/final_network.Rmd
+++ b/analysis/final_network.Rmd
@@ -237,10 +237,9 @@ plot.mixed.layout = function(graph.input,
     
     node.coordinates = rbind(lay.central, lay.circle) %>% as.data.frame() %>% 
         arrange(factor(name, levels = all.nodes)) 
-    
     pp = graph.input %>% ggraph(x = node.coordinates$x, y = node.coordinates$y) + 
         geom_edge_link (aes(color = int.type, width = count), alpha = 0.4) +
-        scale_edge_width(breaks = c(1,2,4,13), range = c(0.5,3)) +
+        scale_edge_width(breaks = c(1,2,4,13), range = c(0.3,3)) +
         geom_node_point(aes(fill = annot.class), 
                         color = "gray30", 
                         size = 4,
@@ -250,9 +249,13 @@ plot.mixed.layout = function(graph.input,
                             ),
                         color = "gray10", 
                         label.size = 0,
+                        hjust = ifelse(node.coordinates[,1] > 0, -0.25, 1.25),
+                        vjust = ifelse(node.coordinates[,2] > 0, -0.3, 1.15),
+                        # hjust = node.coordinates[ ,1] * 1.1,
+                        # vjust = node.coordinates[ ,2] * 1.1,
                         label.r = unit(0.2, "lines"),
                         label.padding = unit(0, "lines"),
-                       nudge_y = 0.1) + 
+                       nudge_y = 0) + 
         scale_edge_color_manual(values = c("positive" = "red4",
                                            "negative" = "dodgerblue3")) + 
         scale_fill_manual(values = c("Endogenous" = "#CAE7B9",
@@ -281,8 +284,10 @@ node.annotations = data.frame(sig.group = c(node.order, c("Ageing", "SBS5", "SBS
 
 
 sig.sig.all.network = plot.mixed.layout(pcawg.sig.sig.net, circular.node.order = node.order)
-ggsave(plot = minor_plot(sig.sig.all.network, expand.factor = 0.05), 
+
+
+ggsave(plot = minor_plot(sig.sig.all.network, expand.factor = 0.2),
        filename = file.path(fig.dir, "sig.sig.all.network.pdf"),
-       width = 5.5, height = 4.3)
+       width = 6.4, height = 5.3)
 ```
 
