--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -75,7 +75,7 @@ ggsave(file = file.path(fig.dir, "PCAWG.mutated.pathways.occurrence.pdf"),
 pathway.summaries.by.tissues = PCAWG.pathways.tissues %>% 
     mutate(across(`Cell Cycle`:Telomeric, ~as.numeric(.x > 0))) %>% 
     group_by(Cancer.Types) %>% 
-    summarize(across(`Cell Cycle`:Telomeric, sum))
+    summarize(across(`Cell Cycle`:Telomeric, ~ sum(.x, na.rm = TRUE)))
 
 pcawg.pathway.summaries.gg = pathway.summaries.by.tissues  %>% 
     gather("Pathway", "Activity", -Cancer.Types) %>% 
@@ -288,13 +288,13 @@ ggsave(plot = pp.odds.ratio.unadjusted,
 
 ```{r}
 sig.path.int.odds.summary.df = summarize_ints_to_df(tissue.odds.ratio.unadjusted)
-sig.path.oddsratio.bipartite = minor_plot(plot_bipartite(sig.path.int.odds.summary.df),
-                                        expand.factor = 0.14)
+sig.path.oddsratio.bipartite = minor_plot(plot_bipartite2(sig.path.int.odds.summary.df),
+                                        expand.factor = 0.5, expand.factor.y = 0.01)
 
 ggsave(plot = sig.path.oddsratio.bipartite,
        filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
                                     "PCAWG_summarized_sig_pathway_unadjusted.bipartite.pdf"),
-       height = 8, width = 5, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+       height = 5, width = 6, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 ```
 
 ### Tissues of Odds ratio interactions
@@ -569,8 +569,8 @@ ggsave(plot = pp.log.log,
 pp.PCAWG.combined.summaries = ggarrange(pp.odds.ratio.unadjusted + ggtitle("Co-occurrence"), 
           pp.logged + ggtitle("lm(signature ~ pathway)"), 
           pp.log.log + ggtitle("glm(pathway ~ signature)"), 
-          widths = c(1,1, 0.3),
-          heights = c(1, 1, 0.3),
+          widths = c(1, 2, 0.6),
+          heights = c(1, 1, 0.4),
           ncol = 1)
 
 pp.PCAWG.combined.summaries = annotate_figure(
